# discord_ai_bot

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose-bot.yml  docker-compose-druid.yml  docker-compose-kafka.yml  docker-compose.yml  environment  pyproject.toml
data/: pg_init.sql
docker/: Dockerfile_model_init  model_init.py
src/discord_ai_bot/: app.py  config.py  schema.py
src/discord_ai_bot/cogs/: guildsDataUpdate.py  msgDataUpdate.py  onReady.py
src/discord_ai_bot/events/: __init__.py  guildsDataUpdate.py
src/discord_ai_bot/model/: __init__.py  guilds.py  members.py
